--- a/META.yml
+++ b/META.yml
@@ -11,7 +11,7 @@
    },
    "generated_by" : "ExtUtils::MakeMaker version 6.50",
    "distribution_type" : "module",
-   "version" : "0.01",
+   "version" : "0.02",
    "name" : "AnyEvent-MP",
    "author" : [],
    "license" : "unknown",
@@ -19,9 +19,10 @@
       "ExtUtils::MakeMaker" : 0
    },
    "requires" : {
-      "AnyEvent" : 3.9,
+      "AnyEvent" : 4.9,
       "Digest::HMAC_MD6" : 0,
       "common::sense" : 0,
+      "JSON::XS" : 2.24,
       "Digest::MD6" : 0
    },
    "abstract" : null,
