Import of MLEHMANN/AnyEvent-MP-0.1 from CPAN.
gitpan-cpan-distribution: AnyEvent-MP
gitpan-cpan-version:      0.1
gitpan-cpan-path:         MLEHMANN/AnyEvent-MP-0.1.tar.gz
gitpan-cpan-author:       MLEHMANN
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -11,7 +11,7 @@
    },
    "generated_by" : "ExtUtils::MakeMaker version 6.50",
    "distribution_type" : "module",
-   "version" : "0.02",
+   "version" : "0.1",
    "name" : "AnyEvent-MP",
    "author" : [],
    "license" : "unknown",
@@ -20,6 +20,7 @@
    },
    "requires" : {
       "AnyEvent" : 4.9,
+      "MIME::Base64" : 3,
       "Digest::HMAC_MD6" : 0,
       "common::sense" : 0,
       "JSON::XS" : 2.24,
