--- a/META.yml
+++ b/META.yml
@@ -1,35 +1,28 @@
-{
-   "no_index" : {
-      "directory" : [
-         "t",
-         "inc"
-      ]
-   },
-   "meta-spec" : {
-      "version" : 1.4,
-      "url" : "http://module-build.sourceforge.net/META-spec-v1.4.html"
-   },
-   "generated_by" : "ExtUtils::MakeMaker version 6.54",
-   "distribution_type" : "module",
-   "version" : "1.28",
-   "name" : "AnyEvent-MP",
-   "author" : [],
-   "license" : "unknown",
-   "build_requires" : {
-      "ExtUtils::MakeMaker" : 0
-   },
-   "requires" : {
-      "AnyEvent" : 5.11,
-      "Net::Interface" : 1.011,
-      "JSON::XS" : 2.25,
-      "Digest::HMAC_MD6" : 0,
-      "MIME::Base64" : 3,
-      "AnyEvent::Watchdog" : 1,
-      "common::sense" : 0,
-      "Digest::MD6" : 0
-   },
-   "abstract" : null,
-   "configure_requires" : {
-      "ExtUtils::MakeMaker" : 0
-   }
-}
+--- #YAML:1.0
+name:               AnyEvent-MP
+version:            1.29
+abstract:           ~
+author:  []
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    AnyEvent:            5.11
+    AnyEvent::Watchdog:  1
+    common::sense:       0
+    Digest::HMAC_MD6:    0
+    Digest::MD6:         0
+    JSON::XS:            2.25
+    MIME::Base64:        3
+    Net::Interface:      1.011
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.55_02
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
